<resources>
    <string name="app_name">AndroidBasicsInventoryApp</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">No products available</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_name">Name</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="add_image_button">Add image</string>
    <string name="place_an_order">Place an Order</string>
    <string name="delete_this_product">Delete this product</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="quantity_hint">Quantity</string>
    <string name="quantity_label">Quantity</string>
    <string name="price_label">Price</string>
    <string name="product_image_content_description">Product image</string>
    <string name="sold_button_text">Sold</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="order_subject">Order more stock</string>
    <string name="order_body">Please send more %s</string>
    <string name="invalid_please_select_image">Please select an image before saving</string>
    <string name="invalid_please_choose_name">Please name your product before saving</string>
    <string name="invalid_please_select_quantity">Please select a valid quantity for your product before saving</string>
    <string name="invalid_please_select_price">Please select a valid price for your product before saving</string>
    <string name="in_stock">%s in stock</string>
    <string name="sold_text">Sold!</string>
    <string name="invalid_no_stock_available">No stock available for sale.</string>
</resources>
